--- a/src/app/features/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage.component.scss
@@ -425,6 +425,10 @@
     min-height: auto;
   }
 
+  .homepage__footer {
+    text-align: center;
+  }
+
 }
 
 /* ==========================================================================
